--- a/projects/xcode4/upnpx/upnpx.xcodeproj/xcshareddata/xcschemes/upnpx.xcscheme
+++ b/projects/xcode4/upnpx/upnpx.xcodeproj/xcshareddata/xcschemes/upnpx.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0730"
-   version = "1.3">
+   version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -16,8 +16,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F62E25E11C486C9C0011E3EA"
-               BuildableName = "df_upnpx.framework"
-               BlueprintName = "df_upnpx"
+               BuildableName = "upnpx.framework"
+               BlueprintName = "upnpx"
                ReferencedContainer = "container:upnpx.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -47,8 +47,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F62E25E11C486C9C0011E3EA"
-            BuildableName = "df_upnpx.framework"
-            BlueprintName = "df_upnpx"
+            BuildableName = "upnpx.framework"
+            BlueprintName = "upnpx"
             ReferencedContainer = "container:upnpx.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,8 +65,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F62E25E11C486C9C0011E3EA"
-            BuildableName = "df_upnpx.framework"
-            BlueprintName = "df_upnpx"
+            BuildableName = "upnpx.framework"
+            BlueprintName = "upnpx"
             ReferencedContainer = "container:upnpx.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
